// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots I18nEditField Default options 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          I18nEditField
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Default options
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <span />
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            I18nEditField
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  edit
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    false
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  This is an example prop called "test".
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  lang
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    'en-CA'
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  values
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            lang
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            value
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            placeholder
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    [
  { lang: 'fr-CA', value: '', placeholder: '' },…
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  showLabel
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    true
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  handleChange
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots I18nEditField With showLabel false in edit mode 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          I18nEditField
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With showLabel false in edit mode
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        className="ui input"
        lang="en-CA"
      >
        <input
          disabled={undefined}
          onChange={[Function]}
          placeholder="placeholder"
          tabIndex={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            I18nEditField
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  edit
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    false
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  This is an example prop called "test".
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  lang
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    'en-CA'
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  values
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            lang
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            value
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            placeholder
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    [
  { lang: 'fr-CA', value: '', placeholder: '' },…
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  showLabel
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    true
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  handleChange
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots I18nEditField With values (displays currently selected language value) 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          I18nEditField
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With values (displays currently selected language value)
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <span />
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            I18nEditField
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  edit
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    false
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  This is an example prop called "test".
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  lang
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    'en-CA'
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  values
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            lang
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            value
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            placeholder
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    [
  { lang: 'fr-CA', value: '', placeholder: '' },…
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  showLabel
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    true
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  handleChange
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots I18nEditField With values in edit mode 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          I18nEditField
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With values in edit mode
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div>
        <div
          className="ui left labeled input edit-field-textbox"
          lang="en-CA"
        >
          <div
            className="ui label edit-field-label"
            onClick={[Function]}
          >
            en
          </div>
          <input
            disabled={undefined}
            onChange={[Function]}
            placeholder="placeholder"
            tabIndex={undefined}
            type="text"
            value=""
          />
          <i
            aria-hidden="true"
            className="icon"
          />
        </div>
        <br />
        <div
          className="ui left labeled input edit-field-textbox"
          lang="fr-CA"
        >
          <div
            className="ui label edit-field-label"
            onClick={[Function]}
          >
            fr
          </div>
          <input
            disabled={undefined}
            onChange={[Function]}
            placeholder="placeholder"
            tabIndex={undefined}
            type="text"
            value=""
          />
          <i
            aria-hidden="true"
            className="icon"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            I18nEditField
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  edit
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    false
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  This is an example prop called "test".
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  lang
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    'en-CA'
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  values
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            lang
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            value
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            placeholder
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    [
  { lang: 'fr-CA', value: '', placeholder: '' },…
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  showLabel
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    true
                    "
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  handleChange
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    func
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
